--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
         <h1 class="importantheading">Road to NBA</h1>
         <h1>Niels Kraftplan</h1>
 
-        <img id="hover-image" src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/bi.jpg" alt="Beschreibung des Bildes">
+        <img id="hover-image" src="bi.jpg" alt="Beschreibung des Bildes">
 
         <a href="https://www.youtube.com/watch?v=1fjhIWJSxfw" class="video-link">BEST OF KOBE EDIT</a>
         <div class="tooltip">
