--- a/videos.html
+++ b/videos.html
@@ -27,78 +27,78 @@
             <li>
                 <h2>Ausfallschritt</h2>
                 <p>- Vorwärtsbewegung <br>- größere Schritte, ca. 90 Grad Kniewinkel <br>- stabiler Oberkörper</p>
-                <video width="400" controls>
+                <video width="400" controls muted>
                     <source src="Videos/Ausfallschritt.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Box Jumps mit Auftakt</h2>
                 <p>- Steppschritt als Auftakt für den Sprung <br>- stabil in der Landung </p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Box Jumps (Auftakt).mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Box Jumps (Auftakt).mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Box Jumps Reverse</h2>
                 <p>- von Box/Stufe herunterfallen lassen <br>- kurzer Bodenkontakt </p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Box Jumps reverse.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Box Jumps reverse.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Imaginary Hurdle</h2>
                 <p>- Knie zur Brust ziehen <br>- kurzer Bodenkontakt</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Imaginary Hurdle.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Imaginary Hurdle.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Imaginary Hurdle einbeinig</h2>
                 <p>- Knie zur Brust ziehen <br>- fortgeschrittene Übung</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Imaginary Hurdle einbeinig.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Imaginary Hurdle einbeinig.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Kniebeuge</h2>
                 <p>- Oberkörper sollte möglichst aufrecht bleiben <br>- Knie nicht nach vorn sondern eher Hintern nach hinten schieben<br>- verschiedene Armpositionen (Seithalte, nach obern, nach vorn) probieren</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Kniebeuge.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Kniebeuge.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Kniebeuge einbeinig</h2>
                 <p>- Oberkörper sollte möglichst aufrecht bleiben <br>- Knie nicht nach vorn schieben sondern eher hinten rein setzen<br>- verschiedene Armpositionen (Seithalte, nach obern, nach vorn) probieren</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Kniebeuge einbeinig.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Kniebeuge einbeinig.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Step Downs</h2>
                 <p>- stabile Landung mit Kniewinkel</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Step Downs.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Step Downs.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Step Downs einbeinig</h2>
                 <p>-stabile Landung mit Kniewinkel <br>- zweites Bein nach nach vorn zum ausbalancieren</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Step Downs einbeinig.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Step Downs einbeinig.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Step ups</h2>
                 <p>-Knie aktive nach obe ziehen <br>- Arme mitführen</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Step Ups.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Step Ups.mp4" type="video/mp4">
                 </video>
             </li>
             <li>
                 <h2>Step up Jump</h2>
                 <p>-Knie aktive nach obe ziehen <br>- Arme mitführen</p>
-                <video width="400" controls>
-                    <source src="/Users/anna-mariadietze/Documents/Programmieren/Road to NBA/Videos/Step Ups sprung.mp4" type="video/mp4">
+                <video width="400" controls muted>
+                    <source src="Videos/Step Ups sprung.mp4" type="video/mp4">
                 </video>
             </li>
         </ul>
